--- a/service-discovery/src/main/resources/application.properties
+++ b/service-discovery/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=Eureka
 
 server.port=8761
 
+eureka.instance.hostname=localhost
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
 eureka.client.service-url.defaultzone=http://localhost:8761/eureka
